refactor: add else time

--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
                 <h3 class="portfolio-title">Проекты 2023 года</h3>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan-shopot-online-store.netlify.app/" target="_blank">
+                        <a class="portfolio-link" href="https://evakerrigan-shopot-online-store.netlify.app/"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2023-online-shop.jpg" alt="online-shop">
                         </a>
                     </li>
@@ -237,44 +238,63 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://rolling-scopes-school.github.io/evakerrigan-JSFEPRESCHOOL2022Q2/momentum/" target="_blank">
+                        <a class="portfolio-link"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFEPRESCHOOL2022Q2/momentum/"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-momentum.jpg" alt="momentum">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan.github.io/cssMemSlider/cssMemSlider/index.html" target="_blank">
+                        <a class="portfolio-link"
+                            href="https://evakerrigan.github.io/cssMemSlider/cssMemSlider/index.html" target="_blank">
                             <img class="portfolio-img" src="image/2022-slider-only-css.jpg" alt="slider only css">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan.github.io/eldritch-codejam/" target="_blank">
+                        <a class="portfolio-link" href="https://evakerrigan.github.io/eldritch-codejam/"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-eldritch.jpg" alt="eldritch">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html" target="_blank">
+                        <a class="portfolio-link"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-shelter.jpg" alt="shelter">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan.github.io/virtual-keyboard/" target="_blank">
+                        <a class="portfolio-link" href="https://evakerrigan.github.io/virtual-keyboard/"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-virtual-keyboard.jpg" alt="virtual keyboard">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/gem-puzzle/" target="_blank">
+                        <a class="portfolio-link"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/gem-puzzle/"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-gem-pazzle.jpg" alt="gem pazzle">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html" target="_blank">
+                        <a class="portfolio-link"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-online-zoo.jpg" alt="online-zoo">
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html" target="_blank">
+                        <a class="portfolio-link"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
+                            target="_blank">
                             <img class="portfolio-img" src="image/2022-travel.jpg" alt="travel">
                         </a>
+                    </li>
+                </ul>
+                <h3 class="portfolio-title">Работа в группе ВТБ, декрет и фриланс</h3>
+                <ul class="portfolio-list">
+                    <li class="portfolio-item">
+                        <p>.  .  .</p>
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Проекты 2015 года</h3>
