--- a/index.html
+++ b/index.html
@@ -213,11 +213,17 @@
                             target="_blank">
                             <img class="portfolio-img" src="image/2023-online-shop.jpg" alt="online-shop">
                         </a>
+                        <div class="portfolio-description">
+                            <em>SPA, js, ts, командная работа</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="https://rs-club.vercel.app/" target="_blank">
                             <img class="portfolio-img" src="image/2023-rs-club.jpg" alt="rs-club">
                         </a>
+                        <div class="portfolio-description">
+                            <em>React, Nest, Mongo, ts, командная работа, авторизация через github, deploy на vercel</em>
+                        </div>
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Проекты 2022 года</h3>
@@ -226,11 +232,17 @@
                         <a class="portfolio-link" href="https://evakerrigan.github.io/cv/" target="_blank">
                             <img class="portfolio-img" src="image/portfolio-2022.jpg" alt="my resume">
                         </a>
+                        <div class="portfolio-description">
+                            <em></em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="https://evakerrigan.github.io/exotic-fruit/" target="_blank">
                             <img class="portfolio-img" src="image/2022-exotic-fruit.jpg" alt="shop exotic fruit">
                         </a>
+                        <div class="portfolio-description">
+                            <em>React, корзина, дизайн, ts </em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
@@ -238,18 +250,27 @@
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-momentum.jpg" alt="momentum">
                         </a>
+                        <div class="portfolio-description">
+                            <em>js, смена языков, todo-лист, кастомный аудиоплеер, виджет погоды, время, приветствие, таймер</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
                             href="https://evakerrigan.github.io/cssMemSlider/cssMemSlider/index.html" target="_blank">
                             <img class="portfolio-img" src="image/2022-slider-only-css.jpg" alt="slider only css">
                         </a>
+                        <div class="portfolio-description">
+                            <em>слайдер на css без js</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="https://evakerrigan.github.io/eldritch-codejam/"
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-eldritch.jpg" alt="eldritch">
                         </a>
+                        <div class="portfolio-description">
+                            <em>js, система замешивания карт</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
@@ -257,12 +278,18 @@
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-shelter.jpg" alt="shelter">
                         </a>
+                        <div class="portfolio-description">
+                            <em>адаптивный лендинг, js, пагинация, слайдер, попап</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="https://evakerrigan.github.io/virtual-keyboard/"
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-virtual-keyboard.jpg" alt="virtual keyboard">
                         </a>
+                        <div class="portfolio-description">
+                            <em>js, ввод знаков мышкой и с клавиатуры</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
@@ -270,6 +297,9 @@
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-gem-pazzle.jpg" alt="gem pazzle">
                         </a>
+                        <div class="portfolio-description">
+                            <em>js, перетаскивание плашек, звуковое сопровождение</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
@@ -277,6 +307,9 @@
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-online-zoo.jpg" alt="online-zoo">
                         </a>
+                        <div class="portfolio-description">
+                            <em>адаптивный лендинг, js, слайдер, попап</em>
+                        </div>
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
@@ -284,12 +317,15 @@
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-travel.jpg" alt="travel">
                         </a>
+                        <div class="portfolio-description">
+                            <em>адаптивный лендинг, js, слайдер, попап</em>
+                        </div>
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Работа в группе ВТБ, декрет и фриланс</h3>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <p>.  .  .</p>
+                        <p>. . .</p>
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Проекты 2015 года</h3>
