--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
-                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q1/shelter/pages/main/index.html"
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-shelter.jpg" alt="shelter">
                         </a>
@@ -313,7 +313,7 @@
                     </li>
                     <li class="portfolio-item">
                         <a class="portfolio-link"
-                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFEPRESCHOOL2022Q2/travel/"
                             target="_blank">
                             <img class="portfolio-img" src="image/2022-travel.jpg" alt="travel">
                         </a>
