--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                                 <li class="header-menu-item">
                                     <a class="header-menu-link" href="#skills">Навыки</a>
                                 </li>
+                                <li class="header-menu-item">
+                                    <a class="header-menu-link" href="#resume">Резюме</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -408,12 +411,161 @@
                 </ul>
             </section>
         </div>
+        <section id="resume" class="resume">
+            <div class="resume-image">
+                <img class="resume-img" src="image/KseniiaLiubasova.jpg" alt="Resume Kseniia Liubasova">
+            </div>
+            <div class="row resume-html" id="resume1">
+                <div class="">
+                    <div class="b-resume-wrapper">
+                        <div class="b-resume">
+                            <div class="b-resume-main-title">
+                                <div class="b-resume-title">
+                                    <strong><em>
+                                            Соискание&nbsp;должности&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                            Frontend&nbsp;/&nbsp;React&nbsp;Developer
+                                    </strong></em>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="row b-resume-contacts">
+                                    <div class="resume-photo">
+                                        <img src="image/me.jpg" class="b-resume-photo"
+                                            alt="my-photo" title="evakerrigan">
+                                    </div>
+                                    <div class=""><br /><br />
+                                        <div class="b-resume-name">
+                                            Любасова Ксения
+                                        </div>
+                                        <ul class="b-resume-info resume-list">
+                                            <li class="resume-item">
+                                                <span><strong>Город:</strong></span> Санкт-Петербург
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>Моб.</strong></span><a href="tel:+79313151738"
+                                                    class="resume-link">
+                                                    8-9-31-31-51-738</a>
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>E-mail:</strong></span><a href="mailto:esenia@ngs.ru"
+                                                    class="resume-link">
+                                                    evakerrigan@gmail.com</a>
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>Telegram:</strong></span><a
+                                                    href="https://t.me/EvaKerrigan" class="resume-link"> EvaKerrigan</a>
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>Skype:</strong></span><a href="skype:EvaKerrigan"
+                                                    class="resume-link">
+                                                    EvaKerrigan</a>
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>Vk:</strong></span><a href="http://vk.com/evakerrigan"
+                                                    target="_blank" class="resume-link"> evakerrigan</a>
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>Github:</strong></span><a
+                                                    href="https://github.com/evakerrigan" target="_blank"
+                                                    class="resume-link">
+                                                    evakerrigan</a>
+                                            </li>
+                                            <li class="resume-item">
+                                                <span><strong>CV:</strong></span><a
+                                                    href="https://evakerrigan.github.io/cv" target="_blank"
+                                                    class="resume-link">
+                                                    http://evakerrigan.github.io/cv</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="b-resume-education">
+                                    <div class="b-resume-education-title">
+                                        <span><strong>Образование:</strong></span> высшее
+                                    </div>
+                                    <ol>
+                                        <li>КемГУ, факультет: физики, кафедра атомной и ядерной физики</li>
+                                        <li>2013 г. повышение квалификации в филиале
+                                            «Российского государственного торгово-экономического университета»
+                                            по программе «Web дизайнер».</li>
+                                        <li>2014 г. Санкт-Петербург, школа Epic Skills, курсы и вебинары: Bootstrap,
+                                            Jquery, PHP, Javascript.</li>
+                                        <li>2022 г. RS-school, курс JavaScript/Front-end Developer</li>
+                                    </ol>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="b-resume-work">
+                                    <div class="b-resume-work-title">
+                                        <span><strong>Место работы:</strong></span>
+                                    </div>
+                                    <ol>
+                                        <li>2014 – Fingli, web-разработчик (Дизайн, редизайн и верстка сайтов.)</li>
+                                        <li>2014 – Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms
+                                            opencart, cms wordpress, cms modx.)</li>
+                                        <li>2015 – Hell’s Hamsters, верстальщик (Верстка лендингов)</li>
+                                        <li>2015 - 2016 - группа ВТБ, работа html-верстальщик (Вёрстка страниц
+                                            корпоративного сайта и верстка email-рассылок.)</li>
+                                        <li>2016-2019 – декрет</li>
+                                        <li>2020 – Freelance, web-разработчик (Создание и поддержка сайтов. Адаптивная
+                                            верстка. Bootstrap. Pixel perfect. Git. Responsive. Кроссбраузерная
+                                            верстка.) </li>
+                                        <li>2021 – смена направления работы на js / frontend / react</li>
+                                    </ol>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="b-resume-merit">
+                                    <div class="b-resume-merit-title">
+                                        <span><strong>Личностные качества:</strong></span> целеустремлённость
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="">
+                                <div class="b-resume-skills">
+                                    <div class="b-resume-skills-title">
+                                        <span><strong>Навыки:</strong></span>
+                                    </div>
+                                    <table class="b-resume-skills-table">
+                                        <tr>
+                                            <td>Языки:</td>
+                                            <td><span><strong>Javascript, (Typescript)</strong></span></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Фреймворки:</td>
+                                            <td><span><strong>React.js, (Nest.js)</strong></span></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Технологии: </td>
+                                            <td><span><strong>Git, Webpack</strong></span></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Макеты: </td>
+                                            <td><span><strong>Figma, Photoshop</strong></span></td>
+                                        </tr>
+                                        <tr>
+                                            <td>Верстка:</td>
+                                            <td><span><strong>HTML5, CSS3, Scss</strong></span></td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="wrapper">
                 <div class="footer-wrapper">
                     <div class="footer-block">
                         <a class="footer-github-link" href="https://github.com/evakerrigan" target="_blank">Мой
                             Github</a>
+                    </div>
+                    <div class="button_download">
+                        <a href="image/KseniiaLiubasova.doc"><em>Скачать резюме</em></a>
                     </div>
                     <div class="footer-block">2022</div>
                 </div>
