refactor: small edit text

--- a/index.html
+++ b/index.html
@@ -561,8 +561,7 @@
             <div class="wrapper">
                 <div class="footer-wrapper">
                     <div class="footer-block">
-                        <a class="footer-github-link" href="https://github.com/evakerrigan" target="_blank">Мой
-                            Github</a>
+                        <a class="footer-github-link" href="https://github.com/evakerrigan" target="_blank">Github</a>
                     </div>
                     <div class="button_download">
                         <a href="image/KseniiaLiubasova.doc"><em>Скачать резюме</em></a>
