refactor: small change

--- a/index.html
+++ b/index.html
@@ -534,8 +534,12 @@
                                             <td><span><strong>Javascript, (Typescript)</strong></span></td>
                                         </tr>
                                         <tr>
+                                            <td>Библиотеки:</td>
+                                            <td><span><strong>React.js</strong></span></td>
+                                        </tr>
+                                        <tr>
                                             <td>Фреймворки:</td>
-                                            <td><span><strong>React.js, (Nest.js)</strong></span></td>
+                                            <td><span><strong>(Nest.js)</strong></span></td>
                                         </tr>
                                         <tr>
                                             <td>Технологии: </td>
