--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                                         <li>2015 – Hell’s Hamsters, верстальщик (Верстка лендингов)</li>
                                         <li>2015 - 2016 - группа ВТБ, html-верстальщик (Вёрстка страниц
                                             корпоративного сайта и верстка email-рассылок.)</li>
-                                        <li>2016-2019 – декрет</li>
+                                        <li>2016 - 2019 – декрет</li>
                                         <li>2020 – Freelance, web-разработчик (Создание и поддержка сайтов. Адаптивная
                                             верстка. Bootstrap. Pixel perfect. Git. Responsive. Кроссбраузерная
                                             верстка.) </li>
