--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                                         <li>2014 – Astropol, web-разработчик (Дизайн и верстка сайтов с нуля. На cms
                                             opencart, cms wordpress, cms modx.)</li>
                                         <li>2015 – Hell’s Hamsters, верстальщик (Верстка лендингов)</li>
-                                        <li>2015 - 2016 - группа ВТБ, html-верстальщик (Вёрстка страниц
+                                        <li>2015 – 2016 - группа ВТБ, html-верстальщик (Вёрстка страниц
                                             корпоративного сайта и верстка email-рассылок.)</li>
                                         <li>2016 – 2019 - декрет</li>
                                         <li>2020 – Freelance, web-разработчик (Создание и поддержка сайтов. Адаптивная
