--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <li class="header-contacts-item">
                                 <h3 class="header-contacts-title">Phone</h3>
                                 <a class="header-contacts-link"
-                                    href="tel:+79313151738">+7&nbsp;9&nbsp;31&nbsp;31&nbsp;51&nbsp;738</a>
+                                    href="tel:+79313151738">+7&nbsp;931&nbsp;315&nbsp;17&nbsp;38</a>
                             </li>
                             <li class="header-contacts-item">
                                 <h3 class="header-contacts-title">Email</h3>
@@ -444,7 +444,7 @@
                                             <li class="resume-item">
                                                 <span><strong>Моб.</strong></span><a href="tel:+79313151738"
                                                     class="resume-link">
-                                                    8-9-31-31-51-738</a>
+                                                    8-931-315-17-38</a>
                                             </li>
                                             <li class="resume-item">
                                                 <span><strong>E-mail:</strong></span><a href="mailto:esenia@ngs.ru"
