--- a/index.html
+++ b/index.html
@@ -219,12 +219,11 @@
                 <h3 class="portfolio-title">Проекты 2023 года</h3>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan-shopot-online-store.netlify.app/"
-                            target="_blank">
-                            <img class="portfolio-img" src="image/2023-online-shop.jpg" alt="online-shop">
+                        <a class="portfolio-link" href="https://eva-images.netlify.app/" target="_blank">
+                            <img class="portfolio-img" src="image/2023-eva-images.jpg" alt="rs-club">
                         </a>
                         <div class="portfolio-description">
-                            <em>SPA, js, ts, командная работа</em>
+                            <em>React, ts, jest, портфолио-магазин фотографий для рекламы</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -234,6 +233,15 @@
                         <div class="portfolio-description">
                             <em>React, Nest, Mongo, ts, командная работа, авторизация через github, deploy на
                                 vercel</em>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <a class="portfolio-link" href="https://evakerrigan-shopot-online-store.netlify.app/"
+                            target="_blank">
+                            <img class="portfolio-img" src="image/2023-online-shop.jpg" alt="online-shop">
+                        </a>
+                        <div class="portfolio-description">
+                            <em>SPA, js, ts, командная работа</em>
                         </div>
                     </li>
                 </ul>
