feat: add projects

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                         <section id="hobbies">
                             <h2 class="content-title">Увлечения</h2>
                             <ul class="content-hobbies-list">
+                                <li class="content-hobbies-item">IT</li>
                                 <li class="content-hobbies-item">Фотография</li>
                                 <li class="content-hobbies-item">Психология</li>
                                 <li class="content-hobbies-item">Путешествия</li>
@@ -132,6 +133,20 @@
                     <section id="experience">
                         <h2 class="content-title">Опыт работы</h2>
                         <ul class="content-expiriens-list">
+                            <li class="content-expiriens-item expiriens-wrapper">
+                                <div class="expiriens-left-block">
+                                    <div class="content-expiriens-date">2022</div>
+                                    <div class="content-expiriens-company">Стриминговый<br /> сервис</div>
+                                </div>
+                                <div class="expiriens-right-block">
+                                    <div class="content-expiriens-profession">Frontend-разработчик</div>
+                                    <div class="content-expiriens-tasks">
+                                        Работа в экосистеме React.js. Создание новых компонент в проекте,
+                                        оптимизация и рефакторинг чужого старого кода, настройка используемых
+                                        внешних библиотек под особенности проекта.
+                                    </div>
+                                </div>
+                            </li>
                             <li class="content-expiriens-item expiriens-wrapper">
                                 <div class="expiriens-left-block">
                                     <div class="content-expiriens-date">2019-2020</div>
@@ -201,14 +216,19 @@
                             <li class="content-skills-item"><span>JavaScript</span></li>
                             <li class="content-skills-item"><span>TypeScript</span></li>
                             <li class="content-skills-item"><span>React</span></li>
+                            <li class="content-skills-item"><span>Redux</span></li>
+                            <li class="content-skills-item"><span>Rtk Query</span></li>
                             <li class="content-skills-item"><span>HTML5</span></li>
                             <li class="content-skills-item"><span>CSS3</span></li>
                             <li class="content-skills-item"><span>Figma</span></li>
                             <li class="content-skills-item"><span>Photoshop</span></li>
                             <li class="content-skills-item"><span>GIT</span></li>
                             <li class="content-skills-item"><span>Pixel Perfect</span></li>
+                            <li class="content-skills-item"><span>Vite</span></li>
                             <li class="content-skills-item"><span>Webpack</span></li>
                             <li class="content-skills-item"><span>Scss</span></li>
+                            <li class="content-skills-item"><span>Trello</span></li>
+                            <li class="content-skills-item"><span>Jira</span></li>
                         </ul>
                     </section>
                 </div>
@@ -223,7 +243,15 @@
                             <img class="portfolio-img" src="image/2023-eva-images.jpg" alt="rs-club">
                         </a>
                         <div class="portfolio-description">
-                            <em>React, ts, jest, портфолио-магазин фотографий для рекламы</em>
+                            <em>Портфолио-магазин, React, typescript, jest, redux, rtk Query</em>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <a class="portfolio-link" href="https://evakerrigan.github.io/exotic-fruit/" target="_blank">
+                            <img class="portfolio-img" src="image/2022-exotic-fruit.jpg" alt="shop exotic fruit">
+                        </a>
+                        <div class="portfolio-description">
+                            <em>Онлайн-магазин, React, корзина, дизайн, typescript </em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -231,7 +259,8 @@
                             <img class="portfolio-img" src="image/2023-rs-club.jpg" alt="rs-club">
                         </a>
                         <div class="portfolio-description">
-                            <em>React, Nest, Mongo, ts, командная работа, авторизация через github, deploy на
+                            <em>Социальная сеть, React, Nest, Mongo, typescript, командная работа, авторизация через
+                                github, deploy на
                                 vercel</em>
                         </div>
                     </li>
@@ -241,7 +270,15 @@
                             <img class="portfolio-img" src="image/2023-online-shop.jpg" alt="online-shop">
                         </a>
                         <div class="portfolio-description">
-                            <em>SPA, js, ts, командная работа</em>
+                            <em>Онлайн-магазин, SPA, js, typescript, командная работа</em>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <a class="portfolio-link" href="https://melodious-fox-fdc007.netlify.app/" target="_blank">
+                            <img class="portfolio-img" src="image/2023-graphiql-api.jpg" alt="graphiql-api">
+                        </a>
+                        <div class="portfolio-description">
+                            <em>Graphql-ide, react, typescript</em>
                         </div>
                     </li>
                 </ul>
@@ -256,11 +293,12 @@
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan.github.io/exotic-fruit/" target="_blank">
-                            <img class="portfolio-img" src="image/2022-exotic-fruit.jpg" alt="shop exotic fruit">
+                        <a class="portfolio-link" href="https://evakerrigan.github.io/eldritch-codejam/"
+                            target="_blank">
+                            <img class="portfolio-img" src="image/2022-eldritch.jpg" alt="eldritch">
                         </a>
                         <div class="portfolio-description">
-                            <em>React, корзина, дизайн, ts </em>
+                            <em>js, система замешивания карт</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -283,15 +321,7 @@
                             <em>слайдер на css без js</em>
                         </div>
                     </li>
-                    <li class="portfolio-item">
-                        <a class="portfolio-link" href="https://evakerrigan.github.io/eldritch-codejam/"
-                            target="_blank">
-                            <img class="portfolio-img" src="image/2022-eldritch.jpg" alt="eldritch">
-                        </a>
-                        <div class="portfolio-description">
-                            <em>js, система замешивания карт</em>
-                        </div>
-                    </li>
+
                     <li class="portfolio-item">
                         <a class="portfolio-link"
                             href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q1/shelter/pages/main/index.html"
@@ -300,6 +330,16 @@
                         </a>
                         <div class="portfolio-description">
                             <em>адаптивный лендинг, js, пагинация, слайдер, попап</em>
+                        </div>
+                    </li>
+                    <li class="portfolio-item">
+                        <a class="portfolio-link"
+                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
+                            target="_blank">
+                            <img class="portfolio-img" src="image/2022-online-zoo.jpg" alt="online-zoo">
+                        </a>
+                        <div class="portfolio-description">
+                            <em>адаптивный лендинг, js, слайдер, попап</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -319,16 +359,6 @@
                         </a>
                         <div class="portfolio-description">
                             <em>js, перетаскивание плашек, звуковое сопровождение</em>
-                        </div>
-                    </li>
-                    <li class="portfolio-item">
-                        <a class="portfolio-link"
-                            href="https://rolling-scopes-school.github.io/evakerrigan-JSFE2022Q3/online-zoo/pages/main/index.html"
-                            target="_blank">
-                            <img class="portfolio-img" src="image/2022-online-zoo.jpg" alt="online-zoo">
-                        </a>
-                        <div class="portfolio-description">
-                            <em>адаптивный лендинг, js, слайдер, попап</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -438,8 +468,8 @@
                             <div class="">
                                 <div class="row b-resume-contacts">
                                     <div class="resume-photo">
-                                        <img src="image/me.jpg" class="b-resume-photo"
-                                            alt="my-photo" title="evakerrigan">
+                                        <img src="image/me.jpg" class="b-resume-photo" alt="my-photo"
+                                            title="evakerrigan">
                                     </div>
                                     <div class=""><br /><br />
                                         <div class="b-resume-name">
@@ -521,6 +551,10 @@
                                             верстка. Bootstrap. Pixel perfect. Git. Responsive. Кроссбраузерная
                                             верстка.) </li>
                                         <li>2021 – смена направления работы на js / frontend / react</li>
+                                        <li>2022 – Стриминговый сервис, frontend-developer
+                                            (Работа в экосистеме React.js. Создание новых компонент в проекте,
+                                            оптимизация и рефакторинг чужого старого кода, настройка используемых
+                                            внешних библиотек под особенности проекта.)</li>
                                     </ol>
                                 </div>
                             </div>
@@ -551,7 +585,7 @@
                                         </tr>
                                         <tr>
                                             <td>Технологии: </td>
-                                            <td><span><strong>Git, Webpack</strong></span></td>
+                                            <td><span><strong>Git, Webpack, Redux, Rtk-query</strong></span></td>
                                         </tr>
                                         <tr>
                                             <td>Макеты: </td>
@@ -559,7 +593,7 @@
                                         </tr>
                                         <tr>
                                             <td>Верстка:</td>
-                                            <td><span><strong>HTML5, CSS3, Scss</strong></span></td>
+                                            <td><span><strong>HTML5, CSS3, Scss, Mui, Tailwind</strong></span></td>
                                         </tr>
                                     </table>
                                 </div>
