feat: add accordeon

--- a/index.html
+++ b/index.html
@@ -283,6 +283,13 @@
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Проекты 2022 года</h3>
+                <input class="hide" id="hd-2022" type="checkbox">
+                <label for="hd-2022">
+                    <span class="portfolio-button">
+                        Показать
+                        <div class="arrow down"></div>
+                    </span>
+                </label>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="https://evakerrigan.github.io/cv/" target="_blank">
@@ -373,12 +380,26 @@
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Работа в группе ВТБ, декрет и фриланс</h3>
+                <input class="hide" id="hd-2016" type="checkbox">
+                <label for="hd-2016">
+                    <span class="portfolio-button">
+                        Показать
+                        <div class="arrow down"></div>
+                    </span>
+                </label>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <p>. . .</p>
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Проекты 2015 года</h3>
+                <input class="hide" id="hd-2015" type="checkbox">
+                <label for="hd-2015">
+                    <span class="portfolio-button">
+                        Показать
+                        <div class="arrow down"></div>
+                    </span>
+                </label>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="http://kerrigan.su/2015-03-teamkeyland.ru/index2.html"
@@ -424,6 +445,13 @@
                     </li>
                 </ul>
                 <h3 class="portfolio-title">Проекты 2013 года</h3>
+                <input class="hide" id="hd-2013" type="checkbox">
+                <label for="hd-2013">
+                    <span class="portfolio-button">
+                        Показать
+                        <div class="arrow down"></div>
+                    </span>
+                </label>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
                         <a class="portfolio-link" href="http://kerrigan.su/yogafree/" target="_blank">
