refactor: change view text

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                             <li class="content-skills-item"><span>TypeScript</span></li>
                             <li class="content-skills-item"><span>React</span></li>
                             <li class="content-skills-item"><span>Redux</span></li>
-                            <li class="content-skills-item"><span>Rtk Query</span></li>
+                            <li class="content-skills-item"><span>RTK Query</span></li>
                             <li class="content-skills-item"><span>HTML5</span></li>
                             <li class="content-skills-item"><span>CSS3</span></li>
                             <li class="content-skills-item"><span>Figma</span></li>
@@ -243,7 +243,7 @@
                             <img class="portfolio-img" src="image/2023-eva-images.jpg" alt="rs-club">
                         </a>
                         <div class="portfolio-description">
-                            <em>Портфолио-магазин, React, typescript, jest, redux, rtk Query</em>
+                            <em>Портфолио-магазин, React, typescript, jest, redux, RTK Query</em>
                         </div>
                     </li>
                     <li class="portfolio-item">
@@ -613,7 +613,7 @@
                                         </tr>
                                         <tr>
                                             <td>Технологии: </td>
-                                            <td><span><strong>Git, Webpack, Redux, Rtk-query</strong></span></td>
+                                            <td><span><strong>Git, Webpack, Redux, RTK Query</strong></span></td>
                                         </tr>
                                         <tr>
                                             <td>Макеты: </td>
