--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                                 <li class="header-menu-item">
                                     <a class="header-menu-link" href="#resume">Резюме</a>
                                 </li>
+                                <li class="header-menu-item">
+                                    <a class="header-menu-link" href="#testwork">Тестовые работы</a>
+                                </li>
+                                <li class="header-menu-item">
+                                    <a class="header-menu-link" href="#certificate">Сертификаты</a>
+                                </li>
                             </ul>
                         </nav>
                     </div>
@@ -473,6 +479,126 @@
                             <img class="portfolio-img" src="image/3port_buddhatemple.jpg"
                                 alt="site Buddha temple at Moscow">
                         </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+        <section id="testwork" class="testwork">
+            <h3 class="testwork-title">Тестовые работы 2023</h3>
+            <ul class="portfolio-list">
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="https://test-research-lab.vercel.app/" target="_blank">
+                        <img class="portfolio-img" src="image/2023-test-research-lab.jpg" alt="test work">
+                    </a>
+                    <div class="portfolio-description">
+                        <p>Тестовое задание:</p>
+                        <em>1. Стек: react, redux toolkit, material ui, formik, typescript.</em><br />
+                        <em>2. Сверстать страничку авторизации. В redux должно быть поле isAuth, при нажатии на кнопку
+                            Sign in оно должно поменяться на true и пользователь должен попасть на следующую страницу
+                            где появляются 3 активные кнопки market, user, projects.
+                            PS: Форма должна быть с использованием formik, простенькая валидация на обязательное поле +
+                            минимальное кол-во символов.</em><br /><br />
+                        <a class="testwork-link"
+                            href="https://www.figma.com/file/2r3MPFlzYeV4HYoqhWhPd1/EX%3ATest?node-id=0%3A1"
+                            target="_blank">Ссылка на figma</a><br />
+                        <a class="testwork-link" href="https://github.com/evakerrigan/test_Research-Lab"
+                            target="_blank">Ссылка на репозиторий</a><br />
+                        <a class="testwork-link" href="https://test-research-lab.vercel.app/" target="_blank">Ссылка на
+                            деплой</a>
+                    </div>
+                </li>
+                <li class="portfolio-item">
+                    <a class="portfolio-link" href="" target="_blank">
+                    </a>
+                    <div class="portfolio-description">
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <div class="certificate">
+            <section id="certificate">
+                <h3 class="portfolio-title">Сертификаты</h3>
+                <ul class="portfolio-list">
+                    <li class="certificate-item">
+                        <a class="portfolio-link" href="https://app.rs.school/certificate/ony8wbvb" target="_blank">
+                            <img class="portfolio-img" src="image/certificate/klyubasova-react-developer.jpg"
+                                alt="certificate">
+                        </a>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >React Developer</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/ony8wbvb" target="_blank">Ссылка на
+                                сертификат</a>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <a class="portfolio-link" href="https://app.rs.school/certificate/t2v1o9m1" target="_blank">
+                            <img class="portfolio-img" src="image/certificate/klyubasova-frontend-developer.jpg"
+                                alt="certificate">
+                        </a>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Frontend Developer</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/t2v1o9m1" target="_blank">Ссылка на
+                                сертификат</a>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <a class="portfolio-link" href="https://app.rs.school/certificate/kur3rayr" target="_blank">
+                            <img class="portfolio-img" src="image/certificate/klyubasova-preschool-javascript.jpg"
+                                alt="certificate">
+                        </a>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Javascript Base</em>
+                            <a class="certificate-link" href="https://app.rs.school/certificate/kur3rayr" target="_blank">Ссылка на
+                                сертификат</a>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <div>
+                            <img class="portfolio-img" src="image/certificate/lyubasova-web-design.jpg" alt="certificate">
+                        </div>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Web Designer</em>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <div>
+                            <img class="portfolio-img" src="image/certificate/lyubasova-server2003.jpg" alt="certificate">
+                        </div>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Windows Server 2003, Active Directory</em>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <div>
+                            <img class="portfolio-img" src="image/certificate/lyubasova-videoconferenc.jpg" alt="certificate">
+                        </div>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Инженер видеоконференц-связи</em>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <div>
+                            <img class="portfolio-img" src="image/certificate/radio-engeneer.jpg" alt="certificate">
+                        </div>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Радиомеханик</em>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <div>
+                            <img class="portfolio-img" src="image/certificate/photographer.jpg" alt="certificate">
+                        </div>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Фотограф</em>
+                        </div>
+                    </li>
+                    <li class="certificate-item">
+                        <div>
+                            <img class="portfolio-img" src="image/certificate/lyubasova-physicist.jpg" alt="certificate">
+                        </div>
+                        <div class="certificate-description">
+                            <em class="certificate-text" >Физик, физическая информатика</em>
+                        </div>
                     </li>
                 </ul>
             </section>
