refactor: change style

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         </section>
         <div class="certificate">
             <section id="certificate">
-                <h3 class="portfolio-title">Сертификаты</h3>
+                <h3 class="certificate-title">Сертификаты</h3>
                 <ul class="portfolio-list">
                     <li class="certificate-item">
                         <a class="portfolio-link" href="https://app.rs.school/certificate/ony8wbvb" target="_blank">
